manifests/base/monitoring/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
  selector:
    app: grafana
  sessionAffinity: None
  type: ClusterIP
